--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-There is going to be a website here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <meta name="author" content="Ali Ghavampour">
+    <meta name="description" content="Home Page">
+    <meta name="keywords" content="ali ghavam, Ali ghavam, alighavam, AliGhavam, ali ghavampour, Ali Ghavampour, Ali GhavamPour, Neuroscience, Motor Neuroscience, fMRI, UWO, Western University, Diedrichsen Lab, Pruszynski Lab">
+    <title>Ali Ghavampour</title>
+</head>
+<body>  
+    <ul class="nav justify-content-center top-menu">
+        <li class="nav-item">
+          <a class="nav-link active a-menu" href="index.html"><span class="menu-span">&lt</span> Home <span class="menu-span">&gt</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active a-menu" href="#"><span class="menu-span">&lt</span> Contact Me <span class="menu-span">&gt</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active a-menu" href="#"><span class="menu-span">&lt</span> About <span class="menu-span">&gt</span></a>
+        </li>
+    </ul>
+    <div class="container div-cont">
+        <div class="row">
+            <div class="col-sm-8">
+                <h3 class="main-head">
+                    <span style="font-weight: bold ; color: #4F2683">Ali Ghavampour</span>
+                </h3>
+                <p class="main-p">
+                    Email (work): aghavamp@uwo.ca
+                    <br>
+                    Email (personal): alighavam79@gmail.com
+                    <br>
+
+                    <br>
+                    <a class="a-body" href="https://win.uwo.ca/" target="_blank"><b>Western Institute for Neuroscience (WIN)</b></a>
+                    <br>
+                    University of Western Ontario <span>🇨🇦</span>
+                    
+
+                </p>
+                <h2 class="about-head">
+                    <span style="color: #4F2683 ; ">About</span>
+                </h2>
+                <p class="about-p">
+                    Short Intro
+                </p>
+            </div>
+            <div class="col-sm-4 div-img">
+                <img class="rounded hp-img mx-auto d-block img-fluid" src="resources/main.JPG" alt="Ali">
+            </div>
+        </div>
+    </div>
+</body>
+</html>
