Modernized little bit

--- a/index.html
+++ b/index.html
@@ -8,52 +8,52 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/b8044d984b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
     <meta name="author" content="Ali Ghavampour">
     <meta name="description" content="Home Page">
     <meta name="keywords" content="ali ghavam, Ali ghavam, alighavam, AliGhavam, ali ghavampour, Ali Ghavampour, Ali GhavamPour, Neuroscience, Motor Neuroscience, fMRI, UWO, Western University, Diedrichsen Lab, Pruszynski Lab">
     <title>Ali Ghavampour</title>
 </head>
 <body>  
-    <ul class="nav justify-content-center top-menu">
-        <li class="nav-item">
-          <a class="nav-link active a-menu" href="index.html"><span class="menu-span">&lt</span> Home <span class="menu-span">&gt</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active a-menu" href="#"><span class="menu-span">&lt</span> Contact Me <span class="menu-span">&gt</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active a-menu" href="#"><span class="menu-span">&lt</span> About <span class="menu-span">&gt</span></a>
-        </li>
-    </ul>
+    <div style="box-shadow: 0 5px 10px #b08edc;">
+        <ul class="nav justify-content-center top-menu">
+            <li class="nav-item">
+            <a class="nav-link active a-menu" href="index.html"> Home </a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link active a-menu" href="#"> Contact Me </a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link active a-menu" href="#"> About </a>
+            </li>
+        </ul>
+    </div>
     <div class="container div-cont">
         <div class="row">
             <div class="col-sm-8">
-                <h3 class="main-head">
-                    <span style="font-weight: bold ; color: #4F2683">Ali Ghavampour</span>
-                </h3>
+                <span class="home-header-name">Ali Ghavampour <span style="color: #bfa1e8;">| MSc</span></span>
+                
                 <p class="main-p">
-                    Email (work): aghavamp@uwo.ca
-                    <br>
-                    Email (personal): alighavam79@gmail.com
-                    <br>
-
-                    <br>
-                    <a class="a-body" href="https://win.uwo.ca/" target="_blank"><b>Western Institute for Neuroscience (WIN)</b></a>
-                    <br>
-                    University of Western Ontario <span>🇨🇦</span>
-                    
-
+                    <a class="a-body" href="https://win.uwo.ca/" target="_blank"><b>Western Institute for Neuroscience (WIN) </b></a>
+                    | <a class="a-body" href="https://www.uwo.ca/index.html" target="_blank"><b>UWO</b></a>
                 </p>
-                <h2 class="about-head">
-                    <span style="color: #4F2683 ; ">About</span>
-                </h2>
+
+                <span class="home-about-head" style="color: #4F2683 ; ">About Me</span>
+
                 <p class="about-p">
-                    Short Intro
+                    Short Intro - Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                    culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
             <div class="col-sm-4 div-img">
-                <img class="rounded hp-img mx-auto d-block img-fluid" src="resources/main.JPG" alt="Ali">
+                <img style="border-radius: 10px !important;" class="hp-img mx-auto d-block img-fluid" src="resources/main.JPG" alt="Ali">
             </div>
         </div>
     </div>
