Links to socialMedia

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a class="nav-link active a-menu" href="index.html"> Home </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link active a-menu" href="#"> Contact Me </a>
+            <a class="nav-link active a-menu" href="#"> Projects </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link active a-menu" href="#"> About </a>
+            <a class="nav-link active a-menu" href="#"> Publications </a>
             </li>
         </ul>
     </div>
@@ -75,13 +75,13 @@
                     <div class="w-100"></div>
                     <div style="margin-top: 15px" class="col d-flex justify-content-center">
                         
-                        <a class="a-icon" style="color: #55acee;" href="#!" role="button">
+                        <a class="a-icon" style="color: #55acee;" href="https://twitter.com/AliGhavampour" role="button">
                             <i class="fab fa-twitter fa-lg fa"></i>
                         </a>
-                        <a class="a-icon" href="">
+                        <a class="a-icon" href="https://github.com/alighavam">
                             <i class="fab fa-github fa-lg fa" style="color: #333333;"></i>
                         </a>
-                        <a class="a-icon" href="">
+                        <a class="a-icon" href="https://www.linkedin.com/in/alighavam/">
                             <i class="fab fa-linkedin fa-lg fa" style="color: #0082ca;"></i>
                         </a>
                         
